Page Cache is not enabled when using the modern WebKit2 API https://bugs.webkit.org/show_bug.cgi?id=129585

Reviewed by Dan Bernstein.

* UIProcess/API/Cocoa/WKProcessPool.mm:
(-[WKProcessPool initWithConfiguration:]):
Default to CacheModelPrimaryWebBrowser until there is a way to configure it.


Canonical link: https://commits.webkit.org/147636@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164956 268f45cc-cd09-0410-ab3c-d52691b4dbfc